--- a/src/app/purchase/components/status-success/status-success.component.html
+++ b/src/app/purchase/components/status-success/status-success.component.html
@@ -1,6 +1,5 @@
 <div class="window">
-    <h1 class="window__title">Success!</h1>
-
+    <app-owner></app-owner>
     <div class="window__body">
         <div class="control-wrapper">
             <h2 class="window__subtitle">Here is your key!</h2>
