--- a/src/app/purchase/components/drop-status-btn/drop-status-btn.component.html
+++ b/src/app/purchase/components/drop-status-btn/drop-status-btn.component.html
@@ -1,3 +1,5 @@
+<app-owner></app-owner>
+
 <button class="btn btn--primary"
     [disabled]="loading || !isActive"
     [class.btn--loading]="loading"
