--- a/src/app/purchase/components/status-success/status-success.component.scss
+++ b/src/app/purchase/components/status-success/status-success.component.scss
@@ -2,3 +2,13 @@
     height: 44px;
     width: 44px;
 }
+
+.window{
+    row-gap: 24px;
+    padding: 32px;
+
+
+    &__body{
+        row-gap: 10px;
+    }
+}
