[new] Link to main for Unavailable drop

--- a/src/app/purchase/components/drop-status-btn/drop-status-btn.component.html
+++ b/src/app/purchase/components/drop-status-btn/drop-status-btn.component.html
@@ -7,3 +7,7 @@
 >
     <btn-loader [isSpinner]="loading" [text]="isActive ? 'Purchase' : 'Sold out'"></btn-loader>
 </button>
+
+<span class="container">
+    <a *ngIf="!isActive && !loading" routerLink="/licenses" class="link">Go to main</a>
+</span>
