--- a/src/app/license-list/components/license-card/license-card.component.html
+++ b/src/app/license-list/components/license-card/license-card.component.html
@@ -4,8 +4,7 @@
     [routerLink]="link" 
 >
     <span class="license__logo">
-        <img *ngIf="license" [src]="'https://dashboard.cactusweb.io/' + license.owner.avatar" alt="">
-        <!-- <img *ngIf="license" [src]="license.owner.logo" alt=""> -->
+        <img *ngIf="license" [src]="license.owner.avatar" alt="">
     </span>
 
     <div class="col">
