[new] CryptoPayment for drop

--- a/src/app/purchase/components/drop-status-btn/drop-status-btn.component.html
+++ b/src/app/purchase/components/drop-status-btn/drop-status-btn.component.html
@@ -3,7 +3,7 @@
 <button class="btn btn--primary"
     [disabled]="loading || !isActive"
     [class.btn--loading]="loading"
-    (click)="purchase.$purchaseState.next('form')"
+    (click)="purchase.$purchaseState.next(paymentWay == 'Crypto' ? 'crypto-payment' : 'form')"
 >
     <btn-loader [isSpinner]="loading" [text]="isActive ? 'Purchase' : 'Sold out'"></btn-loader>
 </button>
