--- a/src/app/common/modules/snackbar/components/snackbar-item.component.scss
+++ b/src/app/common/modules/snackbar/components/snackbar-item.component.scss
@@ -5,3 +5,11 @@
 
   @apply tw-text-sm tw-font-light tw-leading-[22px];
 }
+
+mat-icon {
+  @apply tw-text-lg tw-leading-none;
+}
+
+button {
+  @apply tw-flex tw-items-center tw-justify-center;
+}
