--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<div class="tw-px-20 md:tw-px-10 xs:tw-px-5 tw-grid">
+<csd-nav-default />
+<div class="content-wrapper">
   <router-outlet />
 </div>
 <csd-snackbar />
