--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,11 @@
+:host {
+  @apply tw-grid-rows-[auto_1fr];
+}
+
 csd-snackbar {
   @apply tw-fixed tw-right-8 xs:tw-right-1/2 xs:tw-translate-x-1/2 tw-bottom-10 xs:tw-bottom-4;
+}
+
+.content-wrapper {
+  @apply tw-px-20 md:tw-px-10 xs:tw-px-5 tw-grid tw-py-6;
 }
