--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -1,7 +1,7 @@
 @mixin Button() {
   @apply tw-flex tw-justify-center tw-items-center tw-gap-2;
   @apply tw-h-12 tw-w-full tw-rounded-lg tw-px-2.5;
-  @apply tw-text-base tw-leading-5 tw-font-semibold;
+  @apply tw-text-base tw-leading-5 tw-font-semibold xs:tw-text-sm xs:tw-leading-[17px];
   transition: 0.3s;
 }
 
