--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@
 @import "./styles/material/theme";
 
 @import "./styles/buttons";
+@import "./styles/skeleton-loading";
 
 body {
   @apply tw-bg-[#CEDEE5];
