--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -1,8 +1,13 @@
 @mixin Button() {
-  @apply tw-flex tw-justify-center tw-items-center tw-gap-2;
+  @apply tw-flex tw-justify-center tw-items-center tw-gap-1.5;
   @apply tw-h-12 tw-w-full tw-rounded-lg tw-px-2.5;
   @apply tw-text-base tw-leading-5 tw-font-semibold xs:tw-text-sm xs:tw-leading-[17px];
+  @apply disabled:tw-opacity-70;
   transition: 0.3s;
+
+  mat-icon {
+    @apply tw-font-medium tw-text-lg tw-leading-none;
+  }
 }
 
 @mixin ButtonStroked() {
@@ -12,7 +17,10 @@
 
 .csd-button_flat {
   @include Button();
-  @apply tw-bg-primary tw-text-white hover:tw-bg-primary-hover;
+  @apply tw-bg-primary tw-text-white;
+  &:not(:disabled) {
+    @apply hover:tw-bg-primary-hover;
+  }
 }
 
 .csd-button_stroked {
@@ -21,6 +29,15 @@
 
   &[color="secondary"] {
     @apply tw-border-secondary tw-text-secondary;
-    @apply hover:tw-border-black hover:tw-text-black;
+    &:not(:disabled) {
+      @apply hover:tw-border-black hover:tw-text-black;
+    }
+  }
+
+  &[color="primary"] {
+    @apply tw-border-primary tw-text-primary;
+    &:not(:disabled) {
+      @apply hover:tw-bg-primary hover:tw-text-white;
+    }
   }
 }
