--- a/src/app/licenses-list/components/header/header.component.html
+++ b/src/app/licenses-list/components/header/header.component.html
@@ -1,6 +1,10 @@
 <div class="card row header">
   <h1 class="header__title">Subscriptions</h1>
-  <button class="csd-button_stroked header__button" color="primary">
+  <button
+    class="csd-button_stroked header__button"
+    color="primary"
+    (click)="onOpenBindForm()"
+  >
     Bind new key
     <mat-icon fontIcon="icon-plus"></mat-icon>
   </button>
