[new] MainPart of dashboard

--- a/src/app/common/components/user-data/user-data.component.html
+++ b/src/app/common/components/user-data/user-data.component.html
@@ -3,6 +3,6 @@
     <img *ngIf="user" [src]="user?.avatar" alt="" />
   </div>
   <span class="user__name" [attr.data-skeleton-load]="user ? null : 'text'">
-    {{ user.full_name }}
+    {{ user?.full_name }}
   </span>
 </div>
