--- a/src/assets/fonts/icons/icon-font.css
+++ b/src/assets/fonts/icons/icon-font.css
@@ -21,7 +21,7 @@
 .icon-warn:before {
   content: "\e802";
 }
-.icon-reseat:before {
+.icon-reset:before {
   content: "\e806";
 }
 .icon-copy:before {
@@ -35,4 +35,7 @@
 }
 .icon-plus:before {
   content: "\e80a";
+}
+.icon-discord:before {
+  content: "\e80b";
 }
