--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<csd-lazy-loading-spinner
+  class="tw-fixed tw-w-full tw-top-0 tw-left-0 tw-z-50"
+/>
 <csd-nav-default />
 <div class="content-wrapper">
   <router-outlet />
