[new] Footer + fixes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <csd-lazy-loading-spinner
   class="tw-fixed tw-w-full tw-top-0 tw-left-0 tw-z-50"
 />
+<csd-snackbar class="tw-z-[100000]" />
+
 <csd-nav-default />
 <div class="content-wrapper">
   <router-outlet />
 </div>
-<csd-snackbar class="tw-z-[100000]" />
+<csd-footer />
