--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,9 @@
 :host {
-  @apply tw-grid-rows-[auto_1fr] tw-gap-6;
+  @apply tw-grid-rows-[auto_1fr_auto] tw-gap-6;
 }
 
 csd-snackbar {
-  @apply tw-fixed tw-right-8 xs:tw-right-1/2 xs:tw-translate-x-1/2 tw-bottom-10 xs:tw-bottom-4;
+  @apply tw-fixed tw-right-8 xs:tw-right-1/2 xs:tw-translate-x-1/2 tw-bottom-10 xs:tw-bottom-4 xs:tw-w-full;
 }
 
 .content-wrapper {
