--- a/src/app/common/modules/snackbar/snackbar.component.scss
+++ b/src/app/common/modules/snackbar/snackbar.component.scss
@@ -1,3 +1,3 @@
 :host {
-  @apply tw-grid tw-justify-items-end tw-gap-2 tw-content-end;
+  @apply tw-grid tw-justify-items-end tw-gap-2 tw-content-end xs:tw-justify-items-center xs:tw-px-5 tw-box-border;
 }
