--- a/src/app/common/components/footer/footer.component.html
+++ b/src/app/common/components/footer/footer.component.html
@@ -15,7 +15,7 @@
       class="csd-button"
       target="_blank"
       rel="noopener"
-      href="https://discord.gg/WKzaUeGXf3"
+      href="https://discord.gg/5DSEj7Dan8"
     >
       <mat-icon fontIcon="icon-discord" />
     </a>
@@ -24,14 +24,14 @@
       class="csd-button"
       target="_blank"
       rel="noopener"
-      href="https://twitter.com/CactusDash"
+      href="https://twitter.com/CactusDash_"
     >
       <mat-icon fontIcon="icon-twitter" />
     </a>
   </div>
 
   <a
-    href="https://discord.gg/WKzaUeGXf3"
+    href="https://discord.gg/5DSEj7Dan8"
     target="_blank"
     rel="noopener"
     class="link"
