--- a/src/app/dashboard/components/license-info/license-info.component.scss
+++ b/src/app/dashboard/components/license-info/license-info.component.scss
@@ -21,7 +21,7 @@ span.hr{
     grid-column: 1/3;
 }
 
-app-payment, app-crypto-renew{
+app-payment, app-crypto-renew, app-stripe-payment{
     grid-column: 1/3;
 }
 // .fieldset{
