[new] Purchase ready for deploy!

--- a/src/app/purchase/purchase.component.html
+++ b/src/app/purchase/purchase.component.html
@@ -1,5 +1,8 @@
 <ng-container [ngSwitch]="step$ | async">
   <csd-drop-status *ngSwitchCase="PurchaseSteps.STATUS" />
   <csd-purchase-form *ngSwitchCase="PurchaseSteps.FORM" />
+  <csd-purchase-check-results *ngSwitchCase="PurchaseSteps.CHECK_RESULT" />
+  <csd-purchase-failed *ngSwitchCase="PurchaseSteps.FAILED" />
+  <csd-purchase-success *ngSwitchCase="PurchaseSteps.SUCCESS" />
   <div class="card" *ngSwitchDefault></div>
 </ng-container>
