--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -69,6 +69,8 @@
   @extend .csd-button;
   @extend .csd-button_stroked;
   @apply tw-h-12 tw-w-12 xs:tw-h-10 xs:tw-w-10;
-  @apply xs:tw-text-sm xs:tw-leading-[17px];
+  mat-icon {
+    @apply tw-text-xl tw-leading-none xs:tw-text-lg;
+  }
   border-width: 2px;
 }
