--- a/src/app/common/components/user-data/user-data.component.html
+++ b/src/app/common/components/user-data/user-data.component.html
@@ -1,8 +1,13 @@
-<div class="user row" *ngVar="user$ | async as user">
+<a
+  class="user row"
+  *ngVar="user$ | async as user"
+  [routerLink]="[licensesPath]"
+  aria-label="Go to all Licenses"
+>
   <div class="user__img" [attr.data-skeleton-load]="user ? null : ''">
     <img *ngIf="user" [src]="user?.avatar" alt="" />
   </div>
   <span class="user__name" [attr.data-skeleton-load]="user ? null : 'text'">
     {{ user?.full_name }}
   </span>
-</div>
+</a>
