[new] Payment by stripe to Dashboard

--- a/src/app/dashboard/components/general/general.component.html
+++ b/src/app/dashboard/components/general/general.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="container">
   <csd-tag-container [label]="'Plan type'" [skeletons]="!license">
     {{ license?.type }}
   </csd-tag-container>
