--- a/src/app/dashboard/components/general/general.component.scss
+++ b/src/app/dashboard/components/general/general.component.scss
@@ -1,4 +1,4 @@
-.card {
+.container {
   grid-template-columns: 1fr 1fr;
-  @apply tw-gap-x-4 tw-gap-y-6 xs:tw-gap-y-4;
+  @apply tw-grid tw-gap-x-4 tw-gap-y-6 xs:tw-gap-y-4;
 }
