--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,11 @@
 <csd-back-link />
+
 <csd-dashboard-key-info />
-<csd-dashboard-general class="lg:tw-col-start-2 lg:tw-row-[1/span_2]" />
+
+<div class="card main-info">
+  <csd-dashboard-general />
+  <div class="hr"></div>
+  <csd-dashboard-payment-info />
+</div>
+
 <csd-dashboard-actions />
