--- a/src/app/licenses-list/components/bind-form/bind-form.component.scss
+++ b/src/app/licenses-list/components/bind-form/bind-form.component.scss
@@ -2,7 +2,7 @@
   @apply tw-py-10;
 
   &__title {
-    @apply tw-text-lg tw-leading-[22px] tw-font-semibold tw-mb-1.5 tw-text-center;
+    @apply tw-text-lg tw-leading-[22px] tw-mb-1.5 tw-text-center;
   }
 }
 
