--- a/src/app/licenses-list/components/license-data/license-data.component.html
+++ b/src/app/licenses-list/components/license-data/license-data.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="license__data">
     <h2
-      class="license__title"
+      class="card__title-md license__title"
       [attr.data-skeleton-load]="pending ? 'text' : null"
     >
       {{ license?.owner?.name }}
