--- a/src/app/purchase/steps/purchase-failed/purchase-failed.component.html
+++ b/src/app/purchase/steps/purchase-failed/purchase-failed.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="tw-grid tw-gap-2">
-    <h1 class="title">Payment failed</h1>
+    <h1 class="card__title">Payment failed</h1>
     <p class="subtitle">Please try again</p>
   </div>
 
