--- a/src/app/purchase/steps/purchase-form/purchase-form-title/purchase-form-title.component.scss
+++ b/src/app/purchase/steps/purchase-form/purchase-form-title/purchase-form-title.component.scss
@@ -12,6 +12,6 @@
   }
 }
 
-.title {
-  @apply tw-text-center tw-font-medium tw-text-[22px] xs:tw-text-xl xs:tw-leading-6 tw-font-semibold;
+.card__title {
+  @apply tw-text-center;
 }
