--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -27,6 +27,10 @@
     @apply tw-bg-error tw-text-white;
   }
 
+  &[color="success"] {
+    @apply tw-bg-success tw-text-white;
+  }
+
   &:not(:disabled) {
     @apply hover:tw-brightness-105;
   }
