--- a/src/app/dashboard/components/key-info/key-info.component.html
+++ b/src/app/dashboard/components/key-info/key-info.component.html
@@ -4,7 +4,7 @@
       <img [src]="license.owner.avatar" alt="" *ngIf="license" />
     </div>
     <h1
-      class="owner__name"
+      class="card__title owner__name"
       [attr.data-skeleton-load]="!license ? 'text' : null"
     >
       {{ license?.owner?.name }}
