--- a/src/app/purchase/components/owner/owner.component.html
+++ b/src/app/purchase/components/owner/owner.component.html
@@ -2,7 +2,10 @@
   <div class="owner__logo" [attr.data-skeleton-load]="owner ? null : ''">
     <img [src]="owner.avatar" alt="" *ngIf="owner" />
   </div>
-  <h1 class="owner__name" [attr.data-skeleton-load]="owner ? null : 'text'">
+  <h1
+    class="card__title-md owner__name"
+    [attr.data-skeleton-load]="owner ? null : 'text'"
+  >
     {{ owner?.name }}
   </h1>
 </div>
