--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -6,7 +6,7 @@
   transition: 0.3s;
 
   mat-icon {
-    @apply tw-font-medium tw-text-lg tw-leading-none;
+    @apply tw-font-medium tw-text-lg;
   }
 }
 
